# flet_easy_manage_digital_ingest

./: .entitlements  How-to-Apply-GNU.md  LICENSE.md  README.md  enhanced_logger.py  main.py  my_logger.py  pyproject.toml  utils.py
_data/: home.md
core/: config.py
views/: .user.py  counter.py  exit.py  index.py  mode.py  picker.py  show_data.py
